tests/neg/inline-error-pos.check
-- Error: tests/neg/inline-error-pos.scala:3:11 ------------------------------------------------------------------------
8 |  val b = foo(2) // error
  |          ^^^^^^
  |          cannot reduce inline match with
  |           scrutinee:  {
  |            2
  |          } : Int(2)
  |           patterns :  case 1
  | This location is in code that was inlined at inline-error-pos.scala:3
